tests/codegen/fail/unsupported_cleanup_match_build.ql
extern "c" fn first()

fn main() -> Int {
    let flag = true
    defer first()
    return match flag {
        true => 1,
        false => 0,
    }
}
